# golden-gate

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/input/: assembly.csv
data/input/MoCloOriginal/level_1/: pICH47732.gb  pICH47742.gb  pICH47751.gb  pICH47761.gb  pICH47772.gb  pICH47781.gb  pICH47791.gb
data/input/MoCloOriginal/level_2/: pagm4673.gb  pagm4723.gb
data/input/MoCloOriginal/level_2_linkers/: pAGM8079.gb  pICH41722.gb  pICH41744.gb  pICH41766.gb  pICH41780.gb  pICH41800.gb  pICH41822.gb  pICH49300.gb  pICH50866.gb  pICH54077.gb
data/input/SLOTS/: SLOT_1_END.gb  SLOT_1_START.gb  SLOT_2_END.gb  SLOT_2_START.gb  SLOT_3_END.gb  SLOT_3_START.gb  SLOT_4_END.gb  SLOT_4_START.gb  SLOT_5_END.gb  SLOT_5_START.gb  SLOT_6_END.gb  SLOT_6_START.gb  SLOT_7_END.gb  SLOT_7_START.gb  SLOT_8_START.gb
data/input/TEST/: TEST_SLOT_1.gb  TEST_SLOT_2.gb  TEST_SLOT_3.gb  TEST_SLOT_4.gb  TEST_SLOT_5.gb  TEST_SLOT_6.gb  TEST_SLOT_7.gb
data/input/alzheimer-gates/: p1_stat_gal4dbd_slot_1_v2_plasmid.gb  p1_stat_tet3gr_slot_1.gb  p1_stat_tet3gr_slot_1_plasmid.gb  p2_8are_gal_slot_2.gb  p2_8are_gal_slot_2_plasmid.gb  p2_8are_vp16_slot_2_v2_plasmid.gb  p3_chop_cre_slot_3_v2_plasmid.gb  p3_pgg-lexa_slot_3.gb  p3_pgg-lexa_slot_3_plasmid.gb  p4_induce_my_glow_slot_4.gb  p4_induce_my_glow_slot_4_2input.gb  p4_output_gal4vp16_cre_v2_plasmid.gb  ppd1101_integration_vector.gb
data/output/assemblies/assembly_simulation/: assembly_all_required_parts.txt  assembly_assembly_plan.csv  assembly_errors.csv  assembly_simulation_stats.csv  (+2 more)
src/golden_gate/: __init__.py  cli.py
(+14 files in other folders)
