[project]
name = "golden-gate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dnacauldron>=2.0.12",
    "pycomfort>=0.0.18",
    "typer>=0.9.0",
]

[project.scripts]
golden-gate = "golden_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.14.11",
]
